--- a/star-mongo/pom.xml
+++ b/star-mongo/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>star-common</artifactId>
+    <artifactId>star-mongo</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -17,13 +17,10 @@
     </properties>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
         <dependency>
-            <groupId>com.esotericsoftware</groupId>
-            <artifactId>kryo</artifactId>
-            <version>5.2.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
-
-
     </dependencies>
+
 </project>
