--- a/star-web/pom.xml
+++ b/star-web/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>star</artifactId>
-        <groupId>org.example</groupId>
+        <groupId>com.wlh</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -39,7 +39,7 @@
 
 
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>com.wlh</groupId>
             <artifactId>star-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
