--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <org.springframework.boot.version>2.3.4.RELEASE</org.springframework.boot.version>
+        <jedis.version>4.2.0</jedis.version>
     </properties>
 
     <dependencyManagement>
@@ -44,7 +46,7 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>2.3.4.RELEASE</version>
+                <version>${org.springframework.boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -52,12 +54,12 @@
             <dependency>
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
-                <version>4.2.0</version>
+                <version>${jedis.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
-                <version>2.3.4.RELEASE</version>
+                <version>${org.springframework.boot.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
