--- a/star-mysql/pom.xml
+++ b/star-mysql/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>star-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
