--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <maven.compiler.target>8</maven.compiler.target>
         <org.springframework.boot.version>2.3.4.RELEASE</org.springframework.boot.version>
         <jedis.version>4.2.0</jedis.version>
+        <esotericsoftware.version>5.3.0</esotericsoftware.version>
     </properties>
 
     <dependencyManagement>
@@ -61,6 +62,13 @@
                 <artifactId>spring-boot-starter-test</artifactId>
                 <version>${org.springframework.boot.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
+            <dependency>
+                <groupId>com.esotericsoftware</groupId>
+                <artifactId>kryo</artifactId>
+                <version>${esotericsoftware.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
