--- a/star-mysql/src/main/resources/application.yaml
+++ b/star-mysql/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ spring:
     username: root
     password: root12345678
     url: jdbc:mysql://localhost:3306/study?useUnicode=true&characterEncoding=UTF-8
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     #Spring Boot 默认是不注入这些属性值的，需要自己绑定
     #druid 数据源专有配置
