--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
         <esotericsoftware.version>5.3.0</esotericsoftware.version>
         <apollo.version>2.0.1</apollo.version>
         <druid.version>1.2.11</druid.version>
+        <hutools.version>5.8.0</hutools.version>
     </properties>
 
     <dependencyManagement>
@@ -81,6 +82,11 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid-spring-boot-starter</artifactId>
                 <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutools.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
