测试增加接口调用

--- a/star-mongo/pom.xml
+++ b/star-mongo/pom.xml
@@ -45,7 +45,11 @@
             <groupId>com.esotericsoftware</groupId>
             <artifactId>kryo</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.wlh</groupId>
+            <artifactId>star-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
