--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>star-redis</module>
         <module>star-elasticsearch</module>
         <module>star-mysql</module>
+        <module>star-quartz</module>
     </modules>
     <organization>
         <name>wlh</name>
@@ -43,6 +44,7 @@
         <apollo.version>2.0.1</apollo.version>
         <druid.version>1.2.11</druid.version>
         <hutools.version>5.8.0</hutools.version>
+        <mybatis-version>2.1.3</mybatis-version>
     </properties>
 
     <dependencyManagement>
@@ -60,6 +62,12 @@
                 <artifactId>jedis</artifactId>
                 <version>${jedis.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-version}</version>
+            </dependency>
+
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
