--- a/star-quartz/src/main/resources/spring-quartz.properties
+++ b/star-quartz/src/main/resources/spring-quartz.properties
@@ -29,5 +29,5 @@ org.quartz.jobStore.clusterCheckinInterval=20000
 # \u8BBE\u7F6E\u8C03\u5EA6\u5F15\u64CE\u5BF9\u89E6\u53D1\u5668\u8D85\u65F6\u7684\u5FCD\u8010\u65F6\u95F4 (\u5355\u4F4D\u6BEB\u79D2)
 org.quartz.jobStore.misfireThreshold=60000
 
-org.quartz.jobStore.dataSource = druid
-org.quartz.datasource.druid.connectionProvider.class =com.star.wlh.quartz.config.DruidPoolingConnectionProvider
+org.quartz.jobStore.dataSource = druidDataSource
+org.quartz.datasource.druidDataSource.connectionProvider.class =com.star.wlh.quartz.config.DruidPoolingConnectionProvider
