--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <druid.version>1.2.11</druid.version>
         <hutools.version>5.8.0</hutools.version>
         <mybatis-version>2.1.3</mybatis-version>
+        <easy-excel-version>3.1.0</easy-excel-version>
     </properties>
 
     <dependencyManagement>
@@ -95,6 +96,11 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easy-excel-version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
