--- a/pom.xml
+++ b/pom.xml
@@ -40,11 +40,13 @@
         <maven.compiler.target>8</maven.compiler.target>
         <org.springframework.boot.version>2.3.4.RELEASE</org.springframework.boot.version>
         <jedis.version>4.2.0</jedis.version>
-        <esotericsoftware.version>5.3.0</esotericsoftware.version>
+
         <apollo.version>2.0.1</apollo.version>
         <druid.version>1.2.11</druid.version>
         <hutools.version>5.8.0</hutools.version>
         <mybatis-version>2.1.3</mybatis-version>
+        <esotericsoftware.version>4.0.0</esotericsoftware.version>
+        <javakaffee-version>0.45</javakaffee-version>
         <easy-excel-version>3.1.0</easy-excel-version>
     </properties>
 
@@ -102,6 +104,13 @@
                 <artifactId>easyexcel</artifactId>
                 <version>${easy-excel-version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/de.javakaffee/kryo-serializers -->
+            <dependency>
+                <groupId>de.javakaffee</groupId>
+                <artifactId>kryo-serializers</artifactId>
+                <version>${javakaffee-version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 </project>
