--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
         <javakaffee-version>0.45</javakaffee-version>
         <easy-excel-version>3.1.0</easy-excel-version>
         <guava-version>31.1-jre</guava-version>
+        <mybatis-generator-version>1.3.7</mybatis-generator-version>
     </properties>
 
     <dependencyManagement>
@@ -112,6 +113,12 @@
                 <artifactId>guava</artifactId>
                 <version>${guava-version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-core</artifactId>
+                <version>${mybatis-generator-version}</version>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
