--- a/star-common/pom.xml
+++ b/star-common/pom.xml
@@ -18,6 +18,13 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openjdk.jol/jol-core -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.16</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/com.esotericsoftware/kryo -->
         <dependency>
