--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <mybatis-generator-version>1.3.7</mybatis-generator-version>
         <zookeeper-version>3.6.2</zookeeper-version>
         <dubbo-version>3.1.0</dubbo-version>
+        <mybatis-plus-version>3.4.3.1</mybatis-plus-version>
     </properties>
 
     <dependencyManagement>
@@ -114,6 +115,12 @@
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-core</artifactId>
                 <version>${mybatis-generator-version}</version>
+            </dependency>
+            <!--mybatis-plus的springboot支持-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus-boot-starter</artifactId>
+               <version>${mybatis-plus-version}</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-spring-boot-starter -->
