--- a/star-web/src/main/resources/application.yaml
+++ b/star-web/src/main/resources/application.yaml
@@ -3,7 +3,14 @@ server:
 logging:
   config: classpath:logging-config.xml
 spring:
+#  sql:
+#    init:
+#      schema-locations: classpath:org/springframework/batch/core/schema-mysql.sql
+#      mode: always
+#      mode: never
   profiles:
     active: mysql
-mybatis:
-  mapper-locations: classpath*:mapper/*.xml
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:mapper/*Mapper.xml
