--- a/star-web/src/main/resources/application.yaml
+++ b/star-web/src/main/resources/application.yaml
@@ -14,3 +14,4 @@ mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath*:mapper/*Mapper.xml
+  type-enums-package: com.star.wlh.user.enums
