--- a/star-web/src/main/resources/application.yaml
+++ b/star-web/src/main/resources/application.yaml
@@ -1,20 +1,6 @@
 server:
   port: 9001
   shutdown: immediate
-logging:
-  config: classpath:logging-config.xml
 spring:
-  lifecycle:
-    timeout-per-shutdown-phase: 30s
-  #  sql:
-#    init:
-#      schema-locations: classpath:org/springframework/batch/core/schema-mysql.sql
-#      mode: always
-#      mode: never
   profiles:
-    active: mysql
-mybatis-plus:
-  configuration:
-    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-  mapper-locations: classpath*:mapper/*Mapper.xml
-  type-enums-package: com.star.wlh.user.enums
+    active: dev,mysql
